# eva-llvm

./: .clang-format  .gitignore  CMakeLists.txt
src/: EvaLLVM.cpp  EvaLLVM.h  eva-llvm.cpp
